# semantic-sentinel

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  requirements.txt  start.sh
api/proto/: sentinel.proto  strix.proto
engine/: .clang-format  CMakeLists.txt  vcpkg.json
engine/bench/: avx_bench.cc
engine/include/: arena.hh  avx_math.hh  constant.hh  embedder.hh  node.hh  raii_vector.hh  service.hh
engine/pb/proto/: sentinel.grpc.pb.cc  sentinel.grpc.pb.h  sentinel.pb.cc  sentinel.pb.h  strix.grpc.pb.cc  strix.grpc.pb.h  strix.pb.cc  strix.pb.h
engine/src/: arena.cc  embedder.cc  main.cc  main.cpp  node.cc  service.cc
engine/tests/: avx_math_test.cc  avx_test.cc
gateway/: go.mod  go.sum  http_handler.go  main.go
gateway/cmd/: config.go  init.go  root.go  serve.go
gateway/cmd/strix/: main.go
gateway/internal/: handler.go  hardware.go
gateway/internal/cli/: config.go  init.go  root.go  serve.go
gateway/internal/middleware/: limiter.go
gateway/internal/proxy/: registry.go  registry_test.go  strix.go  worker_pool.go
gateway/internal/server/: server.go
gateway/internal/sys/: hardware.go
gateway/pb/proto/: sentinel.pb.go  sentinel_grpc.pb.go  strix.pb.go  strix_grpc.pb.go
scripts/: bake_tokenizer.py  base_model_test.py  get_model.sh  start.sh
